// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal renders with customStyle 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="__reakit-focus-trap"
    style="position: fixed;"
    tabindex="0"
  />
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow: auto;
  padding: 16px;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  z-index: 999;
  opacity: 1;
  background-color: rgba(74,79,98,0.2);
  background-color: aliceblue;
}

.emotion-2 {
  background-color: #fff;
  position: relative;
  border-radius: 4px;
  border: 0;
  padding: 32px;
  margin: auto;
  width: 616px;
  min-height: initial;
  box-shadow: 0 0 12px 18px rgba(165,165,205,0.2);
  opacity: 1;
  background: radial-gradient(circle, #8b2fe6 0%, #4f0599 50%, #30015a 100%);
}

.emotion-2::before {
  content: '';
  height: 100%;
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  position: absolute;
  top: 16px;
  right: 16px;
  left: 16px;
}

.emotion-6 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
}

.emotion-6.emotion-6 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-bottom: 0;
}

.emotion-9 {
  fill: #b2b6c3;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-9.emotion-9 {
  vertical-align: middle;
}

<div
    class="__reakit-portal"
  >
    <div
      class="emotion-0 emotion-1"
      data-dialog-ref="modal"
    >
      <div
        aria-label="modal"
        aria-modal="true"
        class="emotion-2 emotion-3"
        data-dialog="true"
        id="modal"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <button
            class="emotion-6 emotion-7"
            title="close"
            type="button"
          >
            <svg
              class="sc-ui-icon emotion-8 emotion-9 emotion-7"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
              />
            </svg>
          </button>
        </div>
        <div>
          test
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    class="__reakit-focus-trap"
    style="position: fixed;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Modal renders with default Props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow: auto;
  padding: 16px;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  z-index: 999;
  opacity: 1;
  background-color: rgba(74,79,98,0.2);
}

.emotion-2 {
  background-color: #fff;
  position: relative;
  border-radius: 4px;
  border: 0;
  padding: 32px;
  margin: auto;
  width: 616px;
  min-height: initial;
  box-shadow: 0 0 12px 18px rgba(165,165,205,0.2);
  opacity: 1;
}

.emotion-2::before {
  content: '';
  height: 100%;
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  position: absolute;
  top: 16px;
  right: 16px;
  left: 16px;
}

.emotion-6 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
}

.emotion-6.emotion-6 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-bottom: 0;
}

.emotion-9 {
  fill: #b2b6c3;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-9.emotion-9 {
  vertical-align: middle;
}

<div
    class="__reakit-portal"
  >
    <div
      class="emotion-0 emotion-1"
      data-dialog-ref="modal"
      hidden=""
      style="display: none;"
    >
      <div
        aria-label="modal"
        aria-modal="true"
        class="emotion-2 emotion-3"
        data-dialog="true"
        hidden=""
        id="modal"
        role="dialog"
        style="display: none;"
        tabindex="-1"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <button
            class="emotion-6 emotion-7"
            title="close"
            type="button"
          >
            <svg
              class="sc-ui-icon emotion-8 emotion-9 emotion-7"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal renders with disclosure 1`] = `
<DocumentFragment>
  <button
    aria-controls="modal-test"
    aria-expanded="false"
    aria-haspopup="dialog"
    type="button"
  >
    Test
  </button>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow: auto;
  padding: 16px;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  z-index: 999;
  opacity: 1;
  background-color: rgba(74,79,98,0.2);
}

.emotion-2 {
  background-color: #fff;
  position: relative;
  border-radius: 4px;
  border: 0;
  padding: 32px;
  margin: auto;
  width: 616px;
  min-height: initial;
  box-shadow: 0 0 12px 18px rgba(165,165,205,0.2);
  opacity: 1;
}

.emotion-2::before {
  content: '';
  height: 100%;
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  position: absolute;
  top: 16px;
  right: 16px;
  left: 16px;
}

.emotion-6 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
}

.emotion-6.emotion-6 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-bottom: 0;
}

.emotion-9 {
  fill: #b2b6c3;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-9.emotion-9 {
  vertical-align: middle;
}

<div
    class="__reakit-portal"
  >
    <div
      class="emotion-0 emotion-1"
      data-dialog-ref="modal-test"
      hidden=""
      style="display: none;"
    >
      <div
        aria-label="modal-test"
        aria-modal="true"
        class="emotion-2 emotion-3"
        data-dialog="true"
        hidden=""
        id="modal-test"
        role="dialog"
        style="display: none;"
        tabindex="-1"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <button
            class="emotion-6 emotion-7"
            title="close"
            type="button"
          >
            <svg
              class="sc-ui-icon emotion-8 emotion-9 emotion-7"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal renders with opened={true} 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="__reakit-focus-trap"
    style="position: fixed;"
    tabindex="0"
  />
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow: auto;
  padding: 16px;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  z-index: 999;
  opacity: 1;
  background-color: rgba(74,79,98,0.2);
}

.emotion-2 {
  background-color: #fff;
  position: relative;
  border-radius: 4px;
  border: 0;
  padding: 32px;
  margin: auto;
  width: 616px;
  min-height: initial;
  box-shadow: 0 0 12px 18px rgba(165,165,205,0.2);
  opacity: 1;
}

.emotion-2::before {
  content: '';
  height: 100%;
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  position: absolute;
  top: 16px;
  right: 16px;
  left: 16px;
}

.emotion-6 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
}

.emotion-6.emotion-6 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-bottom: 0;
}

.emotion-9 {
  fill: #b2b6c3;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-9.emotion-9 {
  vertical-align: middle;
}

<div
    class="__reakit-portal"
  >
    <div
      class="emotion-0 emotion-1"
      data-dialog-ref="modal"
    >
      <div
        aria-label="modal"
        aria-modal="true"
        class="emotion-2 emotion-3"
        data-dialog="true"
        id="modal"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <button
            class="emotion-6 emotion-7"
            title="close"
            type="button"
          >
            <svg
              class="sc-ui-icon emotion-8 emotion-9 emotion-7"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
              />
            </svg>
          </button>
        </div>
        <div>
          test
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    class="__reakit-focus-trap"
    style="position: fixed;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Modal renders with portal node (modal=false) 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow: auto;
  padding: 16px;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  z-index: 999;
  opacity: 1;
  background-color: rgba(74,79,98,0.2);
}

.emotion-2 {
  background-color: #fff;
  position: relative;
  border-radius: 4px;
  border: 0;
  padding: 32px;
  margin: auto;
  width: 616px;
  min-height: initial;
  box-shadow: 0 0 12px 18px rgba(165,165,205,0.2);
  opacity: 1;
}

.emotion-2::before {
  content: '';
  height: 100%;
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  position: absolute;
  top: 16px;
  right: 16px;
  left: 16px;
}

.emotion-6 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
}

.emotion-6.emotion-6 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-bottom: 0;
}

.emotion-9 {
  fill: #b2b6c3;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-9.emotion-9 {
  vertical-align: middle;
}

<div
    class="emotion-0 emotion-1"
    data-dialog-ref="modal-test"
    hidden=""
    style="display: none;"
  >
    <div
      aria-label="modal-test"
      class="emotion-2 emotion-3"
      data-dialog="true"
      hidden=""
      id="modal-test"
      role="dialog"
      style="display: none;"
      tabindex="-1"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <button
          class="emotion-6 emotion-7"
          title="close"
          type="button"
        >
          <svg
            class="sc-ui-icon emotion-8 emotion-9 emotion-7"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
